--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,44 +1,47 @@
-.menu-bar__container{
+.menu-bar__container {
 	display: flex;
 	flex-direction: row;
-	position: fixed;
-	z-index: 999;
-	background-color: #ffffff;
+	position: fixed; /*o menu vai ser fixado o topo*/
+	z-index: 999; /* frente de todos os elementos*/
+	background-color: #fff;
 	width: 100%;
 	height: 40px;
-	box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
+	box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
 }
 
-.menu-bar__logo{
-  margin-left: 30px;
-  display: flex;
-  align-items: center;
-}
-
-.menu-bar__item{
-  display: flex;
-  margin:auto;
-  align-items: center;
-}
-
-.menu-bar__item > ul{
+.menu-bar__logo {
+	margin-left: 30px;
 	display: flex;
-	list-style-type: none;
+	align-items: center;
+}
+
+.menu-bar__item {
+	display: flex;
+	margin: auto;
+	align-items: center;
+}
+
+.menu-bar__item > ul {
+	display: flex;
+	list-style: none;
+
 }
 
 .menu-bar__item > ul > li {
 	padding: 5px;
-	margin-right: 15px;
+	margin-right:15px;
 }
 
-.menu-bar__item > ul > li > a {
+.menu-bar__item > ul > li > a{
 	text-decoration: none;
 	padding: 5px;
-	color: rgb(7, 7, 7);
-	font-family: 'Segoe UI';
+	color:black;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.menu-bar__item > ul > li > a:hover {
-	color: blue;
+.menu-bar__item > ul > li > a:hover{
+	color: red;
 	font-weight: 600;
+
+
 }
