--- a/src/app/components/card/card-label/card-label.component.css
+++ b/src/app/components/card/card-label/card-label.component.css
@@ -1,18 +1,21 @@
 .card-label__container{
+
 	position: absolute;
-	bottom:90px;
-	right: 0;
+	bottom: 90px;
+	right:0;
 }
+
 
 .card-label__content{
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	background-color: #0d0d0d;
-	color: white;
-	font-size: 12px;
-	font-family: 'Segoe UI';
-	font-weight: bold;
-	height: 40px;
-	padding: 0px 50px;
+
+color: white;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+
+	padding: 5px 50px;
+	border-radius: 10px;
 }
