--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,17 +1,18 @@
 <a href="#" class="card__container">
 	<img
 		class="card__img"
-		[src]=[gameCover]
+		[src]="[gameCover]"
 		alt=""
 		srcset=""
-	>
+		>
+
 	<app-card-label
-		gameLabel="{{gameLabel}}"
-	>
-	</app-card-label>
+		gameLabel="{{ gameLabel }}"
+		></app-card-label>
+
 	<app-card-pricing
-		gameType="{{gameType}}"
-		gamePrice="{{gamePrice}}"
-	>
-	</app-card-pricing>
+		gameTitle="{{ gameTitle }}"
+		gameType="{{ gameType }}"
+		gamePrice="{{ gamePrice }}"
+	></app-card-pricing>
 </a>
