--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,31 +1,44 @@
 <div class="home__container">
 	<app-card
-		gameCover="assets/bt-1.jpg"
-		gameLabel="DIGITAL"
-		gameType="DIGITAL | PS4"
-		gamePrice="R$ 129,99"
+	gameCover="assets/bt-1.jpg"
+	gameLabel="SPECIAL"
+	gameTitle="Battlefield 1"
+	gameType="Digital PS4"
+	gamePrice="R$129.99"
 	>
 	</app-card>
-	<app-card
-		gameCover="assets/bt-4.jpg"
-		gameLabel="EXCLUSIVE"
-		gameType="DISC | PS5"
-		gamePrice="R$ 269,99"
-	>
-	</app-card>
-	<app-card
-		gameCover="assets/ac-cover.jpg"
-		gameLabel="BEST OF YEAR"
-		gameType="DIGITAL | PS5"
-		gamePrice="R$ 369,99"
-		>
-	</app-card>
-	<app-card
-		gameCover="assets/bt-hardline.jpg"
-		gameLabel="NEW"
-		gameType="DIGITAL | PS3 PS4 PS5"
-		gamePrice="R$ 369,99"
-	>
-	</app-card>
-</div>
 
+
+	<app-card
+	gameCover="assets/bt-4.jpg"
+	gameLabel="NEW"
+	gameTitle="Battlefield 4"
+	gameType="DISC PS4 PS5"
+	gamePrice="R$129.99"
+	>
+	</app-card>
+
+	<app-card
+	gameCover="assets/ac-cover.jpg"
+	gameLabel="FEATURED"
+	gameTitle="Assassin's Creed"
+	gameType="Digital PS4 PS5"
+	gamePrice="R$109.99"
+	>
+	</app-card>
+
+	<app-card
+	gameCover="assets/bt-hardline.jpg"
+	gameLabel="NEW"
+	gameTitle="Battlefield Hardline"
+	gameType="DISC PS5"
+	gamePrice="R$299.99"
+	>
+	</app-card>
+
+
+
+
+
+
+</div>
