--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
-*{
-	padding: 0;
+/* CSS RESET */
+* {
 	margin: 0;
+	padding: 0;
 	border: 0;
-	box-sizing: border-box;
+	box-sizing: border-box; /* comportamento de borda a borda, não do component*/
 }
 
-body{
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(9,9,121,1) 100%);
+body {
+	background: rgb(0,0,0);
+	background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(0,54,151,1) 100%);
 }
